fix api params and catch error when store code
