# services/api-service/request.service.ts
@@ -1,11 +1,12 @@
 import { Get, Post, Service } from "@ourparentcenter/moleculer-decorators-extended";
+import { DeploymentRequests } from "entities";
 import { Context } from "moleculer";
-import { ErrorCode, ErrorMessage, MainnetUploadStatus, MoleculerDBService, RequestDeploymentParams, ResponseDto } from "../../types";
+import { ErrorCode, ErrorMessage, MainnetUploadStatus, MoleculerDBService, RequestDeploymentParams, ResponseDto, UpdateRequestDeploymentParams } from "../../types";
 
 /**
  * @typedef {import('moleculer').Context} Context Moleculer's Context
  */
- @Service({
+@Service({
 	name: 'request',
 	version: 1,
 	/**
@@ -15,12 +16,12 @@ import { ErrorCode, ErrorMessage, MainnetUploadStatus, MoleculerDBService, Reque
 	/**
 	 * Settings
 	 */
-    // authentication: true,
-    // settings: {
-    //     routes: [{
-    //         authentication: true
-    //     }]
-    // },
+	// authentication: true,
+	// settings: {
+	//     routes: [{
+	//         authentication: true
+	//     }]
+	// },
 })
 export default class RequestService extends MoleculerDBService<
 {
@@ -28,7 +29,7 @@ export default class RequestService extends MoleculerDBService<
 },
 {}
 > {
-    /**
+	/**
 	 *  @swagger
 	 *
 	 *  /api/v1/request/create:
@@ -42,11 +43,11 @@ export default class RequestService extends MoleculerDBService<
 	 *          application/json:
 	 *            schema:
 	 *              type: object
-     *              required:
-     *              - code_ids
-     *              - name
-     *              - email
-     *              - contract_description
+	 *              required:
+	 *              - code_ids
+	 *              - name
+	 *              - email
+	 *              - contract_description
 	 *              properties:
 	 *                code_ids:
 	 *                  type: array
@@ -212,6 +213,146 @@ export default class RequestService extends MoleculerDBService<
 			code: ErrorCode.SUCCESSFUL,
 			message: ErrorMessage.REQUEST_SUCCESSFUL,
 			data: { contracts: ctx.params.code_ids }
+		};
+		return response;
+	}
+
+	/**
+	 *  @swagger
+	 *
+	 *  /api/v1/request/update:
+	 *    post:
+	 *      tags:
+	 *        - "Requests"
+	 *      summary:  Update a request to deploy a contract on mainnet
+	 *      description: Update a request to deploy a contract on mainnet
+	 *      requestBody:
+	 *        content:
+	 *          application/json:
+	 *            schema:
+	 *              type: object
+	 *              required:
+	 *              - request_id
+	 *              properties:
+	 *                request_id:
+	 *                  type: number
+	 *                  description: "Id of the request"
+	 *                name:
+	 *                  type: string
+	 *                  description: "Name of subscriber"
+	 *                email:
+	 *                  type: string
+	 *                  description: "Email of subscriber"
+	 *                contract_description:
+	 *                  type: string
+	 *                  description: "Description of contract(s)"
+	 *                project_name:
+	 *                  type: string
+	 *                  description: "Project name"
+	 *                official_project_website:
+	 *                  type: string
+	 *                  description: "Official project website"
+	 *                official_project_email:
+	 *                  type: string
+	 *                  description: "Official project email"
+	 *                project_sector:
+	 *                  type: string
+	 *                  description: "Sector of the contract in the project"
+	 *                whitepaper:
+	 *                  type: string
+	 *                  description: "Official project whitepaper"
+	 *                github:
+	 *                  type: string
+	 *                  description: "Official project github"
+	 *                telegram:
+	 *                  type: string
+	 *                  description: "Official project telegram"
+	 *                discord:
+	 *                  type: string
+	 *                  description: "Official project discord"
+	 *                facebook:
+	 *                  type: string
+	 *                  description: "Official project facebook"
+	 *                twitter:
+	 *                  type: string
+	 *                  description: "Official project twitter"
+	 *      responses:
+	 *        200:
+	 *          description: Request result
+	 *        422:
+	 *          description: Missing parameters
+	 */
+	@Post('/update', {
+		name: 'updateRequestContractDeployment',
+		/**
+		 * Service guard services allowed to connect
+		 */
+		restricted: ['api'],
+		params: {
+			request_id: 'number',
+			name: 'string',
+			email: 'string',
+			contract_description: 'string',
+			project_name: 'string',
+			official_project_website: 'string',
+			official_project_email: 'string',
+			project_sector: 'string',
+			whitepaper: 'string',
+			github: 'string',
+			telegram: 'string',
+			discord: 'string',
+			facebook: 'string',
+			twitter: 'string',
+		},
+	})
+	async updateRequestContractDeployment(ctx: Context<UpdateRequestDeploymentParams>) {
+		let name = ctx.params.name;
+		let email = ctx.params.email;
+		let contract_description = ctx.params.contract_description;
+		let project_name = ctx.params.project_name;
+		let official_project_website = ctx.params.official_project_website;
+		let official_project_email = ctx.params.official_project_email;
+		let project_sector = ctx.params.project_sector;
+		let whitepaper = ctx.params.whitepaper;
+		let github = ctx.params.github;
+		let telegram = ctx.params.telegram;
+		let discord = ctx.params.discord;
+		let facebook = ctx.params.facebook;
+		let twitter = ctx.params.twitter;
+		let requests: DeploymentRequests[] = await this.broker.call('v1.deployment-requests.getRequests', { request_id: ctx.params.request_id });
+		if (requests.length === 0) {
+			const response: ResponseDto = {
+				code: ErrorCode.REQUEST_NOT_FOUND,
+				message: ErrorMessage.REQUEST_NOT_FOUND,
+				data: { request_id: ctx.params.request_id }
+			};
+			return response;
+		}
+		await this.broker.call(
+			'v1.deployment-requests.updateRequests',
+			{
+				request_id: ctx.params.request_id,
+				name,
+				email,
+				contract_description,
+				project_name,
+				official_project_website,
+				official_project_email,
+				project_sector,
+				whitepaper,
+				github,
+				telegram,
+				discord,
+				facebook,
+				twitter,
+				status: MainnetUploadStatus.PENDING,
+				reason: ''
+			}
+		);
+		const response: ResponseDto = {
+			code: ErrorCode.SUCCESSFUL,
+			message: ErrorMessage.UPDATE_REQUEST_SUCCESSFUL,
+			data: { requests: ctx.params }
 		};
 		return response;
 	}
